force-app/main/default/objects/Event__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Vary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>