force-app/main/default/objects/Event__c/fields/Reviewed_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Conditions__c</fullName>
    <label>Have you reviewed the Conditions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, variation is not required</fullName>
            </value>
            <value>
                <fullName>Yes, variation is required before places can be ceased</fullName>
            </value>
            <value>
                <fullName>Yes, variation of the S14-5(4) Condition for the remaining places in the allotment has been completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>