force-app/main/default/objects/Event__c/fields/ServiceIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>ServiceIntegrationId__c</fullName>
    <formula>Service__r.Integration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Integration Id</label>
    <type>Text</type>
</CustomField>