force-app/main/default/objects/Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Field to show the Status of the Event.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Not Approved: Under Reconsideration</fullName>
            </value>
            <value>
                <fullName>Not Approved: Under AAT Reconsideration</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting Response to Notice to Resolve</fullName>
            </value>
            <value>
                <fullName>Vetoed</fullName>
            </value>
            <value>
                <fullName>Transfer: Activated</fullName>
            </value>
            <value>
                <fullName>Transfer: Not to be Activated</fullName>
            </value>
            <value>
                <fullName>Vetoed: Under Reconsideration</fullName>
            </value>
            <value>
                <fullName>Transfer: Pending Activation</fullName>
            </value>
            <value>
                <fullName>Pending RFI</fullName>
            </value>
            <value>
                <fullName>Vetoed: Under AAT Reconsideration</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Not Revoked</fullName>
            </value>
            <value>
                <fullName>Revoked: Under Reconsideration</fullName>
            </value>
            <value>
                <fullName>Revoked: Under AAT Reconsideration</fullName>
            </value>
            <value>
                <fullName>Cessation Applied</fullName>
            </value>
            <value>
                <fullName>Automatic Transfer: Pending Activation</fullName>
            </value>
            <value>
                <fullName>Vetoed by Department</fullName>
            </value>
            <value>
                <fullName>Vetoed by AAT</fullName>
            </value>
            <value>
                <fullName>Variation: Activated</fullName>
            </value>
            <value>
                <fullName>Variation: Pending Activation</fullName>
            </value>
            <value>
                <fullName>Variation: Not to be Activated</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Not Approved by Department</fullName>
            </value>
            <value>
                <fullName>Not Approved by AAT</fullName>
            </value>
            <value>
                <fullName>Approved: Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>