force-app/main/default/objects/Event__c/recordTypes/Bring_Online.recordType-meta.xml
<RecordType>
    <fullName>Bring_Online</fullName>
    <active>true</active>
    <description>Used for record the bring online</description>
    <label>Bring Online</label>
</RecordType>