force-app/main/default/objects/Event__c/recordTypes/Change_Care_Setting.recordType-meta.xml
<RecordType>
    <fullName>Change_Care_Setting</fullName>
    <active>true</active>
    <description>Event triggered when care settings are changed in an allotment</description>
    <label>Change Care Setting</label>
</RecordType>