force-app/main/default/objects/Event__c/recordTypes/Combine.recordType-meta.xml
<RecordType>
    <fullName>Combine</fullName>
    <active>true</active>
    <label>Combine</label>
</RecordType>