force-app/main/default/objects/Event__c/recordTypes/Commence_Funding.recordType-meta.xml
<RecordType>
    <fullName>Commence_Funding</fullName>
    <active>true</active>
    <label>Commence Funding</label>
</RecordType>