force-app/main/default/objects/Event__c/recordTypes/Exchange_care_type.recordType-meta.xml
<RecordType>
    <fullName>Exchange_care_type</fullName>
    <active>true</active>
    <label>Exchange care type</label>
</RecordType>