force-app/main/default/objects/Event__c/recordTypes/Extend_PA_Period.recordType-meta.xml
<RecordType>
    <fullName>Extend_PA_Period</fullName>
    <active>true</active>
    <label>Extend PA Period</label>
</RecordType>