force-app/main/default/objects/Event__c/recordTypes/GPMS_Cease_Places.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Cease_Places</fullName>
    <active>true</active>
    <description>Used for recording Ceased places</description>
    <label>Cease Places</label>
</RecordType>