force-app/main/default/objects/Event__c/recordTypes/GPMS_Cease_S14_9_Places.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Cease_S14_9_Places</fullName>
    <active>true</active>
    <description>Used to record the event for S14-9 ceased places</description>
    <label>Cease S14-9 Places</label>
</RecordType>