force-app/main/default/objects/Event__c/recordTypes/GPMS_Deed_of_Variation.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Deed_of_Variation</fullName>
    <active>true</active>
    <description>Deed of variation event for convert care mix function</description>
    <label>Deed of Variation</label>
</RecordType>