force-app/main/default/objects/Event__c/recordTypes/GPMS_Manage_Offline_places.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Manage_Offline_places</fullName>
    <active>true</active>
    <description>Manage Offline places and Operational places</description>
    <label>Manage the Offline Places</label>
</RecordType>