force-app/main/default/objects/Event__c/recordTypes/GPMS_Relinquish.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Relinquish</fullName>
    <active>true</active>
    <description>Relinquish Event</description>
    <label>Relinquish Places</label>
</RecordType>