force-app/main/default/objects/Event__c/recordTypes/GPMS_Vary_Service_Location.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Vary_Service_Location</fullName>
    <active>true</active>
    <description>Variation of Residential Service Address</description>
    <label>Vary Service Location</label>
</RecordType>