force-app/main/default/objects/Event__c/recordTypes/NATSIFAC_Cease_Places.recordType-meta.xml
<RecordType>
    <fullName>NATSIFAC_Cease_Places</fullName>
    <active>true</active>
    <label>NATSIFAC Cease Places</label>
</RecordType>