force-app/main/default/objects/Event__c/recordTypes/NATSIFAC_Reinstate_Places.recordType-meta.xml
<RecordType>
    <fullName>NATSIFAC_Reinstate_Places</fullName>
    <active>true</active>
    <label>NATSIFAC Reinstate Places</label>
</RecordType>