force-app/main/default/objects/Event__c/recordTypes/Record_Allotment.recordType-meta.xml
<RecordType>
    <fullName>Record_Allotment</fullName>
    <active>true</active>
    <label>Record Allotment</label>
</RecordType>