force-app/main/default/objects/Event__c/recordTypes/Revoke.recordType-meta.xml
<RecordType>
    <fullName>Revoke</fullName>
    <active>true</active>
    <label>Revoke</label>
</RecordType>