force-app/main/default/objects/Event__c/recordTypes/Surrender.recordType-meta.xml
<RecordType>
    <fullName>Surrender</fullName>
    <active>true</active>
    <label>Surrender</label>
</RecordType>