force-app/main/default/objects/Event__c/recordTypes/Suspend_or_Cease_funding.recordType-meta.xml
<RecordType>
    <fullName>Suspend_or_Cease_funding</fullName>
    <active>true</active>
    <label>Suspend or Cease funding</label>
</RecordType>