force-app/main/default/objects/Event__c/recordTypes/Transfer.recordType-meta.xml
<RecordType>
    <fullName>Transfer</fullName>
    <active>true</active>
    <description>Places: Transfer - S16-13/S16-1</description>
    <label>Transfer</label>
</RecordType>