force-app/main/default/objects/Event__c/recordTypes/Variation.recordType-meta.xml
<RecordType>
    <fullName>Variation</fullName>
    <active>true</active>
    <label>Variation</label>
</RecordType>