force-app/main/default/objects/Event__c/recordTypes/Variations_by_Provider_Secretary.recordType-meta.xml
<RecordType>
    <fullName>Variations_by_Provider_Secretary</fullName>
    <active>true</active>
    <label>Variations by Provider &amp; Secretary</label>
</RecordType>