force-app/main/default/objects/Event__c/validationRules/Event_ServiceCombineLock.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_ServiceCombineLock</fullName>
    <active>true</active>
    <description>This used to lock the record during the service combine process.</description>
    <errorConditionFormula>Service__r.GPMS_CombineLock__c &amp;&amp; ! $Permission.Mulesoft_Integration</errorConditionFormula>
    <errorMessage>This service is being combined. Related records cannot be changed.</errorMessage>
</ValidationRule>