force-app/main/default/objects/Event__c/validationRules/Perm_Event_Create_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_Event_Create_Access</fullName>
    <active>true</active>
    <description>STO and NATSIFAC record access</description>
    <errorConditionFormula>AND(
ISNEW()
,
AND(
ISBLANK(TEXT(Status__c)),
OR(
$Permission.GPMS_NATSIFAC,
$Permission.GPMS_STO
)))</errorConditionFormula>
    <errorMessage>You do not have access to create this record</errorMessage>
</ValidationRule>