force-app/main/default/objects/Event__c/validationRules/Perm_NATSIFAC_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_NATSIFAC_Access</fullName>
    <active>true</active>
    <description>NATSIFAC record access</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
ISPICKVAL(Service__r.Care_Type__c,&quot;National Aboriginal and Torres Strait Islander Flexible Aged Care Program&quot;),
NOT
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_NATSIFAC,
$Permission.System_Administrator
)))</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>