force-app/main/default/objects/Event__c/validationRules/Perm_NATSIFAC_Field_Edit_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_NATSIFAC_Field_Edit_Access</fullName>
    <active>true</active>
    <description>NATSIFAC field edit access</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
AND(
OR(
ISPICKVAL(Event_Type__c, &quot;NATSIFAC Reinstate Places&quot;),
ISPICKVAL(Event_Type__c, &quot;NATSIFAC Cease Places&quot;)),
ISCHANGED(Status_Date__c)
),
$Permission.GPMS_NATSIFAC
)</errorConditionFormula>
    <errorMessage>You do not have access to edit this field</errorMessage>
</ValidationRule>