force-app/main/default/objects/Event__c/validationRules/Perm_STO_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_STO_Access</fullName>
    <active>true</active>
    <description>STO record access</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
OR(
ISPICKVAL(Event_Type__c, &quot;NATSIFAC Reinstate Places&quot;),
ISPICKVAL(Event_Type__c, &quot;NATSIFAC Cease Places&quot;))
),
$Permission.GPMS_STO
)</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>